Changed html and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <body>
     <h1>Title</h1>
     <p>Our description</p>
+    <article>
+      <h3>New Article</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta odit
+        impedit tenetur alias hic, cupiditate, ea ullam ut quo delectus
+        dignissimos laboriosam totam unde praesentium ratione dolores accusamus!
+        Quae hic sequi cumque perspiciatis impedit unde vero fuga itaque, nulla
+        dignissimos!
+      </p>
+    </article>
     <script src="script.js"></script>
   </body>
 </html>
